#015-consultando - Finaliza requisito de consulta a API externa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/keycloak
 spring.datasource.username=keycloak
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#######FEIGN############
+
+feign.analise_de_credito=analise-de-credito
+feign.url_analise_de_credito=localhost:9999
